folder structure changes

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "@dfinity/auth-client": "^2.4.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "react-router-dom": "^7.9.4"
   },
   "version": "1.0.0",
   "description": "Principal: xpatv-7nk5z-t3lvk-ujw6d-pxudi-gzaz7-p5pap-dun5e-2toyl-2fx7f-xae",
