--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@dfinity/auth-client": "^2.4.1",
     "nodemon": "^3.1.10",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4"
   },
   "version": "1.0.0",
